<?xml version="1.0"?>
<package format="2">
  <name>ovda_ethernetip</name>
  <version>0.0.0</version>
  <description>Library implementing OVDA EtherNet/IP (Industrial Protocol).</description>

  <license>BSD</license>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author email="kshehata@clearpathrobotics.com">Kareem Shehata</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <test_depend>gtest</test_depend>
</package>
